--- a/package.json
+++ b/package.json
@@ -7,20 +7,41 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "format": "xo --fix",
+    "preview": "vite preview",
+    "test": "xo"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "firebase": "^9.22.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "eslint": "^8.38.0",
+    "eslint": "^8.41.0",
+    "eslint-config-xo": "^0.43.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2"
-  }
+    "sass": "^1.62.1",
+    "vite": "^4.3.2",
+    "xo": "^0.54.2"
+  },
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/petark7/iwconnect-mentorship.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/petark7/iwconnect-mentorship/issues"
+  },
+  "homepage": "https://github.com/petark7/iwconnect-mentorship#readme",
+  "description": ""
 }
