--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "firebase": "^9.22.1",
+    "firebase-admin": "^11.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.1",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.2",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -26,6 +32,7 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "eslint": "^8.41.0",
     "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-react": "^0.27.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
