--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
     "test": "xo"
   },
   "dependencies": {
-    "prop-types": "^15.8.1",
-    "sass": "^1.62.1",
-    "universal-cookie": "^4.0.4",
     "bootstrap": "^5.2.3",
     "firebase": "^9.22.1",
     "firebase-admin": "^11.8.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.62.1",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
