--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "env-cmd -f .env vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "format": "xo --fix",
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.1.3",
+    "env-cmd": "^10.1.0",
     "firebase": "^9.22.1",
     "firebase-admin": "^11.8.0",
     "prop-types": "^15.8.1",
