--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "xo"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.1.3",
     "env-cmd": "^10.1.0",
