--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "env-cmd -f .env vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "vite build",
+    "build": "env-cmd -f .env vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "format": "xo --fix",
     "preview": "vite preview",
