--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "env-cmd": "^10.1.0",
     "firebase": "^9.22.1",
     "firebase-admin": "^11.8.0",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.44.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "redux": "^4.2.1",
