--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-pagination-control": "^1.0.5",
     "react-cookie": "^4.1.1",
+    "react-date-picker": "^10.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.1",
     "react-hot-toast": "^2.4.1",
